website/i18n/zh-hant/docusaurus-plugin-content-docs/version-2.x/search.mdx
---
keywords:
  - algolia
  - search
---

# 搜尋功能

您可以透過以下幾種方式為網站添加搜尋功能：

- 🥇 [Algolia DocSearch](#using-algolia-docsearch)（**官方支援**）
- 👥 [Typesense DocSearch](#using-typesense-docsearch)
- 👥 [本地搜尋](#using-local-search)
- 👥 [自訂 `SearchBar` 組件](#using-your-own-search)

:::info

🥇 Docusaurus 對 [Algolia DocSearch](#using-algolia-docsearch) 提供**一級支援**。

👥 其他選項由**社群維護**：請將問題回報至各自的程式庫。

:::

## 🥇 使用 Algolia DocSearch {#using-algolia-docsearch}

Docusaurus **官方支援** [Algolia DocSearch](https://docsearch.algolia.com)。

該服務對所有開源專案**免費**：請務必閱讀[檢查清單](https://docsearch.algolia.com/docs/who-can-apply/)並[申請 DocSearch 計畫](https://docsearch.algolia.com/apply)。

DocSearch 每週會爬取您的網站一次（排程可透過網頁介面設定），並將所有內容彙總至 Algolia 索引中。這些內容隨後會透過 Algolia API 直接從前端查詢。

若您的網站[不符合](https://docsearch.algolia.com/docs/who-can-apply)免費託管版 DocSearch 的資格，或網站位於防火牆後且非公開狀態，您可以[自行運行](https://docsearch.algolia.com/docs/run-your-own/) DocSearch 爬蟲。

:::note

預設情況下，Docusaurus 預設配置會生成 Algolia 爬蟲可使用的 [sitemap.xml](https://docusaurus.io/sitemap.xml)。

:::

:::info[來自舊版 docsearch？]

您可以在[我們的部落格文章](/blog/2021/11/21/algolia-docsearch-migration)或 [DocSearch 遷移文件](https://docsearch.algolia.com/docs/migrating-from-legacy)中閱讀更多關於從舊版 DocSearch 基礎架構遷移的資訊。

:::

### 索引配置 {#algolia-index-configuration}

申請通過並部署後，您將收到一封包含所有詳細資訊的電子郵件，以便將 DocSearch 添加到專案中。可透過[網頁介面](https://crawler.algolia.com/)編輯和管理爬取作業。索引在部署後立即可用，因此通常無需手動配置。

:::tip

強烈建議使用類似於 [**Docusaurus 2 網站配置**](https://docsearch.algolia.com/docs/templates/#docusaurus-v2-template)的設定。

:::

### 連接 Algolia {#connecting-algolia}

Docusaurus 自帶的 `@docusaurus/preset-classic` 支援 Algolia DocSearch 整合。若使用經典預設配置，則無需額外安裝。

<details>
<summary>Installation steps when not using <code>@docusaurus/preset-classic</code></summary>

1. Install the package:

```bash npm2yarn
npm install --save @docusaurus/theme-search-algolia
```

2. Register the theme in `docusaurus.config.js`:

```js title="docusaurus.config.js"
module.exports = {
  title: 'My site',
  // ...
  themes: ['@docusaurus/theme-search-algolia'],
  themeConfig: {
    // ...
  },
};
```

</details>

接著，在 `themeConfig` 中添加 `algolia` 欄位。**[申請 DocSearch](https://docsearch.algolia.com/apply/)** 以取得 Algolia 索引和 API 金鑰。

```js title="docusaurus.config.js"
module.exports = {
  // ...
  themeConfig: {
    // ...
    // highlight-start
    algolia: {
      // The application ID provided by Algolia
      appId: 'YOUR_APP_ID',

      // Public API key: it is safe to commit it
      apiKey: 'YOUR_SEARCH_API_KEY',

      indexName: 'YOUR_INDEX_NAME',

      // Optional: see doc section below
      contextualSearch: true,

      // Optional: Specify domains where the navigation should occur through window.location instead on history.push. Useful when our Algolia config crawls multiple documentation sites and we want to navigate with window.location.href to them.
      externalUrlRegex: 'external\\.com|domain\\.com',

      // Optional: Replace parts of the item URLs from Algolia. Useful when using the same search index for multiple deployments using a different baseUrl. You can use regexp or string in the `from` param. For example: localhost:3000 vs myCompany.com/docs
      replaceSearchResultPathname: {
        from: '/docs/', // or as RegExp: /\/docs\//
        to: '/',
      },

      // Optional: Algolia search parameters
      searchParameters: {},

      // Optional: path for search page that enabled by default (`false` to disable it)
      searchPagePath: 'search',

      // Optional: whether the insights feature is enabled or not on Docsearch (`false` by default)
      insights: false,

      //... other Algolia params
    },
    // highlight-end
  },
};
```

:::info

`searchParameters` 選項在 Docusaurus v1 中名為 `algoliaOptions`。

請參閱其[官方 DocSearch 文件](https://docsearch.algolia.com/docs/api#searchparameters)了解可能的數值。

:::

:::warning

在 Algolia 爬取您的網站之前，搜尋功能可能無法可靠運作。

若重大變更後搜尋仍無法運作，請使用 Algolia 儀表板**觸發新的爬取作業**。

:::

### 上下文搜尋 {#contextual-search}

上下文搜尋功能**預設為啟用**。

它能確保搜尋結果**與當前語言和版本相關**。

```js title="docusaurus.config.js"
module.exports = {
  // ...
  themeConfig: {
    // ...
    // highlight-start
    algolia: {
      contextualSearch: true,
    },
    // highlight-end
  },
};
```

假設您有2個文件版本（**v1**和**v2**）以及2種語言（`en`和`fr`）。

當瀏覽v2文件時，若搜尋結果顯示v1文件會顯得奇怪。有時v1和v2文件內容相似，可能導致同一查詢出現重複結果（每個版本各顯示一次）。

同理，瀏覽法文網站時，若顯示英文文件的搜尋結果也不合理。

為解決此問題，上下文搜尋功能會識別您當前瀏覽的文件版本與語言，並動態建立搜尋過濾條件。

- 在`/en/docs/v1/myDoc`頁面時，搜尋結果僅包含**v1**版本的**英文**內容（及其他未版本化的頁面）
- 在`/fr/docs/v2/myDoc`頁面時，搜尋結果僅包含**v2**版本的**法文**內容（及其他未版本化的頁面）

:::info

當啟用`contextualSearch: true`（預設值）時，上下文篩選條件會與`algolia.searchParameters.facetFilters`提供的條件合併。

若有特殊需求，可停用`contextualSearch`並自訂`facetFilters`：

```js title="docusaurus.config.js"
module.exports = {
  // ...
  themeConfig: {
    // ...
    // highlight-start
    algolia: {
      contextualSearch: false,
      searchParameters: {
        facetFilters: ['language:en', ['filter1', 'filter2'], 'filter3'],
      },
    },
    // highlight-end
  },
};
```

詳見[Algolia faceting官方文件](https://www.algolia.com/doc/guides/managing-results/refine-results/faceting/)。

:::

### 自訂Algolia搜尋樣式 {#styling-your-algolia-search}

DocSearch預設採用經過微調的主題，設計符合無障礙標準，確保色彩與對比度達標。

您仍可透過編輯`/src/css/custom.css`檔案，使用Docusaurus的[Infima CSS變數](styling-layout.mdx#styling-your-site-with-infima)來調整DocSearch樣式。

```css title="/src/css/custom.css"
[data-theme='light'] .DocSearch {
  /* --docsearch-primary-color: var(--ifm-color-primary); */
  /* --docsearch-text-color: var(--ifm-font-color-base); */
  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
  --docsearch-container-background: rgba(94, 100, 112, 0.7);
  /* Modal */
  --docsearch-modal-background: var(--ifm-color-secondary-lighter);
  /* Search box */
  --docsearch-searchbox-background: var(--ifm-color-secondary);
  --docsearch-searchbox-focus-background: var(--ifm-color-white);
  /* Hit */
  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-white);
  /* Footer */
  --docsearch-footer-background: var(--ifm-color-white);
}

[data-theme='dark'] .DocSearch {
  --docsearch-text-color: var(--ifm-font-color-base);
  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
  --docsearch-container-background: rgba(47, 55, 69, 0.7);
  /* Modal */
  --docsearch-modal-background: var(--ifm-background-color);
  /* Search box */
  --docsearch-searchbox-background: var(--ifm-background-color);
  --docsearch-searchbox-focus-background: var(--ifm-color-black);
  /* Hit */
  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-emphasis-100);
  /* Footer */
  --docsearch-footer-background: var(--ifm-background-surface-color);
  --docsearch-key-gradient: linear-gradient(
    -26.5deg,
    var(--ifm-color-emphasis-200) 0%,
    var(--ifm-color-emphasis-100) 100%
  );
}
```

### 自訂Algolia搜尋行為 {#customizing-the-algolia-search-behavior}

Algolia DocSearch支援[多項參數設定](https://docsearch.algolia.com/docs/api/)，可透過`docusaurus.config.js`檔案中的`algolia`欄位傳遞。

```js title="docusaurus.config.js"
module.exports = {
  themeConfig: {
    // ...
    algolia: {
      apiKey: 'YOUR_API_KEY',
      indexName: 'YOUR_INDEX_NAME',
      // Options...
    },
  },
};
```

### 修改Algolia搜尋元件 {#editing-the-algolia-search-component}

若要直接編輯Algolia搜尋的React元件，請對`@docusaurus/theme-search-algolia`中的`SearchBar`元件進行[swizzle](swizzling.mdx)操作：

```bash npm2yarn
npm run swizzle @docusaurus/theme-search-algolia SearchBar
```

### 技術支援 {#algolia-support}

Algolia DocSearch團隊可協助解決網站搜尋問題。

可透過[電子郵件](mailto:documentationsearch@algolia.com)或[Discord](https://discord.gg/tXdr5mP)聯繫他們。

Docusaurus在[Discord](https://discordapp.com/invite/docusaurus)上也設有`#algolia`頻道。

## 👥 使用Typesense DocSearch {#using-typesense-docsearch}

[Typesense](https://typesense.org) DocSearch運作方式類似Algolia DocSearch，差別在於網站內容會被索引至Typesense搜尋叢集。

Typesense 是一個[開源](https://github.com/typesense/typesense)的即時搜尋引擎，您可以選擇：

- 在自有伺服器上[自行託管](https://typesense.org/docs/latest/guide/install-typesense.html#option-2-local-machine-self-hosting)，或
- 使用託管服務 [Typesense Cloud](https://cloud.typesense.org)。

與 Algolia DocSearch 類似，包含兩個元件：

- [typesense-docsearch-scraper](https://github.com/typesense/typesense-docsearch-scraper) - 用於爬取網站內容並將資料索引至您的 Typesense 叢集。
- [docusaurus-theme-search-typesense](https://github.com/typesense/docusaurus-theme-search-typesense) - 可整合至網站的搜尋列 UI 元件。

請參閱逐步教學：[如何執行 typesense-docsearch-scraper](https://typesense.org/docs/latest/guide/docsearch.html#step-1-set-up-docsearch-scraper) 以及[如何在 Docusaurus 網站安裝搜尋列](https://typesense.org/docs/latest/guide/docsearch.html#option-a-docusaurus-powered-sites)。

## 👥 使用本地搜尋 {#using-local-search}

若網站搜尋索引規模較小，可考慮使用本地搜尋外掛，將索引檔案下載至使用者瀏覽器端執行搜尋。

社群支援的[本地搜尋外掛清單可在此查閱](https://docusaurus.io/community/resources#search)。

## 👥 使用自訂搜尋 {#using-your-own-search}

若要使用自訂搜尋功能，請替換 `@docusaurus/theme-classic` 中的 `SearchBar` 元件

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic SearchBar
```

此操作會在專案中建立 `src/themes/SearchBar` 檔案。重新啟動開發伺服器並編輯該元件後，Docusaurus 將改用您的自訂 `SearchBar` 元件。

**注意**：您也可以[從 Algolia SearchBar 進行替換](#editing-the-algolia-search-component)，並以此為基礎建立自訂搜尋元件。