website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.0.1/search.mdx
---
keywords:
  - algolia
  - search
---

# 搜尋

有幾種方式可以為您的網站添加搜尋功能：

- 🥇 [Algolia DocSearch](#using-algolia-docsearch) (**官方支援**)
- 👥 [Typesense DocSearch](#using-typesense-docsearch)
- 👥 [本地搜尋](#using-local-search)
- 👥 [自訂 `SearchBar` 元件](#using-your-own-search)

:::info

🥇 Docusaurus 為 [Algolia DocSearch](#using-algolia-docsearch) 提供**一級支援**。

👥 其他選項由**社群維護**：請將問題回報至各自的儲存庫。

:::

## 🥇 使用 Algolia DocSearch {#using-algolia-docsearch}

Docusaurus **官方支援** [Algolia DocSearch](https://docsearch.algolia.com)。

該服務對任何開源專案**免費**：請確保閱讀[檢查清單](https://docsearch.algolia.com/docs/who-can-apply/)並[申請 DocSearch 計畫](https://docsearch.algolia.com/apply)。

DocSearch 每週爬取您的網站一次（排程可透過網頁介面設定），並將所有內容彙總到 Algolia 索引中。這些內容隨後透過 Algolia API 直接從前端查詢。

如果您的網站[不符合資格](https://docsearch.algolia.com/docs/who-can-apply)使用免費託管版 DocSearch，或您的網站位於防火牆後且非公開，則可以[自行運行](https://docsearch.algolia.com/docs/run-your-own/) DocSearch 爬蟲。

:::note

預設情況下，Docusaurus 預設配置會生成 Algolia 爬蟲可使用的 [sitemap.xml](https://docusaurus.io/sitemap.xml)。

:::

:::info[來自舊版 docsearch？]

您可以在[我們的部落格文章](/blog/2021/11/21/algolia-docsearch-migration)或 [DocSearch 遷移文件](https://docsearch.algolia.com/docs/migrating-from-legacy)中閱讀更多關於從舊版 DocSearch 基礎架構遷移的資訊。

:::

### 索引配置 {#algolia-index-configuration}

在您的申請獲批准並部署後，您將收到一封電子郵件，其中包含將 DocSearch 添加到專案的所有詳細資訊。您可以透過[網頁介面](https://crawler.algolia.com/)編輯和管理爬取。索引在部署後立即可用，因此通常不需要手動配置。

:::tip

強烈建議使用類似於 [**Docusaurus v3 網站配置**](https://docsearch.algolia.com/docs/templates/#docusaurus-v2-template)的設定。

:::

### 連接 Algolia {#connecting-algolia}

Docusaurus 自帶的 `@docusaurus/preset-classic` 支援 Algolia DocSearch 整合。如果您使用經典預設配置，則無需額外安裝。

<details>
<summary>Installation steps when not using <code>@docusaurus/preset-classic</code></summary>

1. Install the package:

```bash npm2yarn
npm install --save @docusaurus/theme-search-algolia
```

2. Register the theme in `docusaurus.config.js`:

```js title="docusaurus.config.js"
export default {
  title: 'My site',
  // ...
  themes: ['@docusaurus/theme-search-algolia'],
  themeConfig: {
    // ...
  },
};
```

</details>

然後，在您的 `themeConfig` 中添加一個 `algolia` 欄位。**[申請 DocSearch](https://docsearch.algolia.com/apply/)** 以獲取您的 Algolia 索引和 API 金鑰。

```js title="docusaurus.config.js"
export default {
  // ...
  themeConfig: {
    // ...
    // highlight-start
    algolia: {
      // The application ID provided by Algolia
      appId: 'YOUR_APP_ID',

      // Public API key: it is safe to commit it
      apiKey: 'YOUR_SEARCH_API_KEY',

      indexName: 'YOUR_INDEX_NAME',

      // Optional: see doc section below
      contextualSearch: true,

      // Optional: Specify domains where the navigation should occur through window.location instead on history.push. Useful when our Algolia config crawls multiple documentation sites and we want to navigate with window.location.href to them.
      externalUrlRegex: 'external\\.com|domain\\.com',

      // Optional: Replace parts of the item URLs from Algolia. Useful when using the same search index for multiple deployments using a different baseUrl. You can use regexp or string in the `from` param. For example: localhost:3000 vs myCompany.com/docs
      replaceSearchResultPathname: {
        from: '/docs/', // or as RegExp: /\/docs\//
        to: '/',
      },

      // Optional: Algolia search parameters
      searchParameters: {},

      // Optional: path for search page that enabled by default (`false` to disable it)
      searchPagePath: 'search',

      // Optional: whether the insights feature is enabled or not on Docsearch (`false` by default)
      insights: false,

      //... other Algolia params
    },
    // highlight-end
  },
};
```

:::info

`searchParameters` 選項在 Docusaurus v1 中名為 `algoliaOptions`。

請參閱其[官方 DocSearch 文件](https://docsearch.algolia.com/docs/api#searchparameters)了解可能的值。

:::

:::warning

在 Algolia 爬取您的網站之前，搜尋功能可能無法可靠運作。

如果搜尋在重大變更後無法運作，請使用 Algolia 儀表板**觸發新的爬取**。

:::

### 上下文搜尋 {#contextual-search}

上下文搜尋功能**預設為啟用**。

它能確保搜尋結果**與當前語言和版本相關**。

```js title="docusaurus.config.js"
export default {
  // ...
  themeConfig: {
    // ...
    // highlight-start
    algolia: {
      contextualSearch: true,
    },
    // highlight-end
  },
};
```

假設您有2個文件版本（**v1**和**v2**）和2種語言（`en`和`fr`）。

當瀏覽v2文件時，若搜尋結果包含v1文件會顯得奇怪。有時v1和v2文件內容非常相似，這會導致相同查詢出現重複的搜尋結果（每個版本各出現一次）。

同理，當瀏覽法語網站時，若搜尋結果包含英語文件也會顯得突兀。

為解決此問題，上下文搜尋功能會識別您正在瀏覽的特定文件版本和語言，並動態建立搜尋查詢過濾條件。

- 在`/en/docs/v1/myDoc`頁面時，搜尋結果僅包含**v1**文件的**英文**結果（以及其他未版本化的頁面）
- 在`/fr/docs/v2/myDoc`頁面時，搜尋結果僅包含**v2**文件的**法文**結果（以及其他未版本化的頁面）

:::info

當使用`contextualSearch: true`（預設值）時，上下文面過濾器會與`algolia.searchParameters.facetFilters`提供的過濾器合併。

若有特殊需求，您可以停用`contextualSearch`並自行定義`facetFilters`：

```js title="docusaurus.config.js"
export default {
  // ...
  themeConfig: {
    // ...
    // highlight-start
    algolia: {
      contextualSearch: false,
      searchParameters: {
        facetFilters: ['language:en', ['filter1', 'filter2'], 'filter3'],
      },
    },
    // highlight-end
  },
};
```

請參考相關的[Algolia面過濾文件](https://www.algolia.com/doc/guides/managing-results/refine-results/faceting/)。

:::

### 自訂Algolia搜尋樣式 {#styling-your-algolia-search}

DocSearch預設附帶一個經過微調的主題，該主題專為無障礙設計，確保顏色和對比度符合標準。

您仍可透過編輯`/src/css/custom.css`檔案，使用Docusaurus的[Infima CSS變數](styling-layout.mdx#styling-your-site-with-infima)來重新定義DocSearch的樣式。

```css title="/src/css/custom.css"
[data-theme='light'] .DocSearch {
  /* --docsearch-primary-color: var(--ifm-color-primary); */
  /* --docsearch-text-color: var(--ifm-font-color-base); */
  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
  --docsearch-container-background: rgba(94, 100, 112, 0.7);
  /* Modal */
  --docsearch-modal-background: var(--ifm-color-secondary-lighter);
  /* Search box */
  --docsearch-searchbox-background: var(--ifm-color-secondary);
  --docsearch-searchbox-focus-background: var(--ifm-color-white);
  /* Hit */
  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-white);
  /* Footer */
  --docsearch-footer-background: var(--ifm-color-white);
}

[data-theme='dark'] .DocSearch {
  --docsearch-text-color: var(--ifm-font-color-base);
  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
  --docsearch-container-background: rgba(47, 55, 69, 0.7);
  /* Modal */
  --docsearch-modal-background: var(--ifm-background-color);
  /* Search box */
  --docsearch-searchbox-background: var(--ifm-background-color);
  --docsearch-searchbox-focus-background: var(--ifm-color-black);
  /* Hit */
  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-emphasis-100);
  /* Footer */
  --docsearch-footer-background: var(--ifm-background-surface-color);
  --docsearch-key-gradient: linear-gradient(
    -26.5deg,
    var(--ifm-color-emphasis-200) 0%,
    var(--ifm-color-emphasis-100) 100%
  );
}
```

### 自訂Algolia搜尋行為 {#customizing-the-algolia-search-behavior}

Algolia DocSearch支援一系列[選項](https://docsearch.algolia.com/docs/api/)，您可將這些選項傳遞至`docusaurus.config.js`檔案中的`algolia`欄位。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // ...
    algolia: {
      apiKey: 'YOUR_API_KEY',
      indexName: 'YOUR_INDEX_NAME',
      // Options...
    },
  },
};
```

### 編輯Algolia搜尋元件 {#editing-the-algolia-search-component}

若您偏好編輯Algolia搜尋的React元件，可對`@docusaurus/theme-search-algolia`中的`SearchBar`元件進行[swizzle](swizzling.mdx)操作：

```bash npm2yarn
npm run swizzle @docusaurus/theme-search-algolia SearchBar
```

### 支援服務 {#algolia-support}

Algolia DocSearch團隊可協助您解決網站上的搜尋問題。

您可透過[電子郵件](mailto:documentationsearch@algolia.com)或[Discord](https://discord.gg/tXdr5mP)聯繫他們。

Docusaurus在[Discord](https://discordapp.com/invite/docusaurus)上也設有`#algolia`頻道。

## 👥 使用Typesense DocSearch {#using-typesense-docsearch}

[Typesense](https://typesense.org) DocSearch的運作方式與Algolia DocSearch類似，不同之處在於您的網站會被索引至Typesense搜尋叢集中。

Typesense 是一個[開源](https://github.com/typesense/typesense)即時搜尋引擎，您可以選擇：

- 在自有伺服器上[自行託管](https://typesense.org/docs/latest/guide/install-typesense.html#option-2-local-machine-self-hosting)，或
- 使用託管服務 [Typesense Cloud](https://cloud.typesense.org)。

與 Algolia DocSearch 類似，包含兩個元件：

- [typesense-docsearch-scraper](https://github.com/typesense/typesense-docsearch-scraper) - 負責爬取網站內容並將資料索引至 Typesense 叢集。
- [docusaurus-theme-search-typesense](https://github.com/typesense/docusaurus-theme-search-typesense) - 可整合至網站的搜尋列 UI 元件。

請參閱逐步教學：[執行 typesense-docsearch-scraper](https://typesense.org/docs/latest/guide/docsearch.html#step-1-set-up-docsearch-scraper) 與 [在 Docusaurus 網站安裝搜尋列](https://typesense.org/docs/latest/guide/docsearch.html#option-a-docusaurus-powered-sites)。

## 👥 使用本地搜尋 {#using-local-search}

當搜尋索引規模較小且可直接下載至使用者瀏覽器時，可採用本地搜尋外掛程式。

社群支援的[本地搜尋外掛程式清單](https://docusaurus.io/community/resources#search)可供參考。

## 👥 使用自訂搜尋 {#using-your-own-search}

若要使用自訂搜尋，請替換 `@docusaurus/theme-classic` 中的 `SearchBar` 元件

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic SearchBar
```

此操作會在專案中建立 `src/themes/SearchBar` 檔案。重啟開發伺服器並編輯元件後，Docusaurus 將改用您的自訂 `SearchBar` 元件。

**注意**：您亦可[從 Algolia SearchBar 替換](#editing-the-algolia-search-component)並基於此開發自訂搜尋元件。